--- a/02 - JS + CSS Clock/index-finshed.html
+++ b/02 - JS + CSS Clock/index-finshed.html
@@ -103,20 +103,16 @@
     function setData() {
       const now = new Date();
 
-      // 秒針
       const seconds = now.getSeconds();
-      // 秒針角度
-      const secondsDegrees = ((seconds / 60) * 360) + 90;
-      // CSS 控制
-      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      const secondsDegrees = (seconds / 60) * 360 + 90;
 
       const mins = now.getMinutes();
-      const minsDegrees = ((mins / 60) * 360) + 90;
-      minHand.style.transform = `rotate(${minsDegrees}deg)`;
+      const minsDegrees = (mins / 60) * 360 + 90;
 
       const hours = now.getHours();
-      const hoursDegrees = ((hours / 12) * 360) + 90;
-      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+      // 計算每一分鐘對時針的角度影響，使時針可以緩慢地移動
+      const hoursDegrees = (hours / 12) * 360 + (mins / 12 / 60) * 360 + 90;
+      
 
       // 把動畫效果關閉，避免動畫閃爍跳轉問題！
       if (secondsDegrees === 90) secondHand.style.transition = 'all 0s';
@@ -127,6 +123,11 @@
 
       if (hoursDegrees === 90) hourHand.style.transition = 'all 0s';
       else hourHand.style.transition = 'all 0.05s';
+
+      // 控制 CSS
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      minHand.style.transform = `rotate(${minsDegrees}deg)`;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
     }
 
     setInterval(setData, 1000);
